--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.40", features = ["derive"] }
+config = "0.15.11"
+directories = "6.0.0"
+eyre = "0.6.12"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.8.23"
