--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ directories = "6.0.0"
 eyre = "0.6.12"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
