--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "de"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/umbra-ecosystem/de"
 
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
@@ -18,3 +19,8 @@ opt-level = "z"
 lto = true
 codegen-units = 1
 panic = "abort"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
