--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dotenvy = "0.15.7"
 eyre = "0.6.12"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
+walkdir = "2.5.0"
 
 [profile.release]
 strip = true
