--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ repository = "https://github.com/umbra-ecosystem/de"
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
 config = "0.15.11"
+dialoguer = "0.11.0"
 directories = "6.0.0"
 dotenvy = "0.15.7"
 eyre = "0.6.12"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
+tracing = "0.1.41"
 walkdir = "2.5.0"
 
 [profile.release]
