--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/umbra-ecosystem/de"
 clap = { version = "4.5.40", features = ["derive"] }
 color-eyre = "0.6.5"
 config = "0.15.11"
+console = "0.16.0"
 dialoguer = "0.11.0"
 directories = "6.0.0"
 dotenvy = "0.15.7"
