--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 repository = "https://github.com/umbra-ecosystem/de"
 
 [dependencies]
+carbon = "0.1.0"
+chrono = "0.4.41"
 clap = { version = "4.5.40", features = ["derive"] }
 color-eyre = "0.6.5"
 config = "0.15.11"
