--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dialoguer = "0.11.0"
 directories = "6.0.0"
 dotenvy = "0.15.7"
 eyre = "0.6.12"
+itertools = "0.14.0"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.9.0"
 tracing = "0.1.41"
