--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ dotenvy = "0.15.7"
 eyre = "0.6.12"
 itertools = "0.14.0"
 serde = { version = "1.0.219", features = ["derive"] }
+thiserror = "2.0.12"
 toml = "0.9.0"
 tracing = "0.1.41"
 walkdir = "2.5.0"
