--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "2.0.12"
 toml = "0.9.0"
 tracing = "0.1.41"
 walkdir = "2.5.0"
+indicatif = "0.18.0"
 
 [dependencies.axoupdater]
 version = "0.9.0"
