--- a/de.toml
+++ b/de.toml
@@ -1,3 +1,55 @@
 [project]
 name = "de"
 workspace = "de"
+
+# This is shared for all profiles
+[setup]
+git = { "url" = "https://github.com/umbra-ecosystem/de.git", "branch" = "main" }
+
+# Define different profiles
+[setup.profiles.dev]
+git = { branch = "develop" }
+
+[setup.steps.copy_env]
+name = "Set up environment"
+type = "fs-copy"
+source = "(.*)\\.env\\.example"
+destination = "$1.env"
+overwrite = false               # Default is true, but can be set to false to always copy
+
+# All profile step
+[setup.steps.install_backend_dependencies]
+name = "Install backend dependencies"
+service = { name = "php", compose = "../infra/docker-compose.yml" }
+command = "composer install --no-interaction --optimize-autoloader --prefer-dist"
+
+# All profile step
+[setup.steps.install_frontend_dependencies]
+name = "Install frontend dependencies"
+command = "npm install"
+
+# All profile step
+[setup.steps.restore_database]
+name = "Restore database"
+service = { name = "mysql", compose = "../infra/docker-compose.yml" }
+command = "mysql -u root -p$DB_PASSWORD < $DE_FILES/$DB_DATABASE.sql"
+snapshot = [
+    { command = "mysqldump -p$DB_PASSWORD $DB_DATABASE > $DB_DATABASE.sql", files = [
+        "$DB_DATABASE.sql",
+    ] },
+]
+env = { DB_PASSWORD = "DB_PASSWORD", DB_DATABASE = "DB_DATABASE" }
+
+# Default only step
+[setup.profiles.dev.steps.run_migrations]
+name = "Run migrations"
+service = { name = "php", compose = "../infra/docker-compose.yml" }
+command = "php artisan migrate --force"
+skip_if = "php artisan migrate:status | grep -q 'No migrations found.'" # Skip if no migrations are found
+
+# Default only step
+[setup.profiles.dev.steps.run_seeder]
+name = "Run seeder"
+service = { name = "php", compose = "../infra/docker-compose.yml" }
+command = "php artisan db:seed --force"
+optional = true                                                     # Optional step, can be skipped if seeding is not needed
