Enable serde support for chrono and update step types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/umbra-ecosystem/de"
 
 [dependencies]
 carbon = "0.1.0"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.41", features = ["derive"] }
 color-eyre = "0.6.5"
 config = "0.15.13"
