Refactor setup project config and snapshot structure
- Move `GitConfig`, `StepService`, `ApplyCommand`, and `ExportCommand`
to new `setup/types.rs` - Flatten `src/setup/project/config.rs` into
`src/setup/project.rs` - Update imports and usage to reflect new module
structure - Change `StepService.compose` to be optional - Update
`StringOr` helper with `clone_value` method - Adjust snapshot structures
for improved clarity and consistency - Update TOML to remove `$DE_FILES`
variable from database step paths

--- a/de.toml
+++ b/de.toml
@@ -32,8 +32,8 @@ command = "npm install"
 [setup.steps.restore_database]
 name = "Restore database"
 service = { name = "mysql", compose = "../infra/docker-compose.yml" }
-apply = { "command" = "mysql -u root -p$PASSWORD $DATABASE", "stdin" = { "file" = "$DE_FILES/$DATABASE.sql" } }
-export = { command = "mysqldump -p$PASSWORD $DATABASE", stdout = { "file" = "$DE_FILES/$DATABASE.sql" } }
+apply = { "command" = "mysql -u root -p$PASSWORD $DATABASE", "stdin" = { "file" = "$DATABASE.sql" } }
+export = { command = "mysqldump -p$PASSWORD $DATABASE", stdout = { "file" = "$DATABASE.sql" } }
 env = { PASSWORD = "DB_PASSWORD", DATABASE = "DB_DATABASE" }
 
 # Default only step
