--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ toml = "0.9.0"
 tracing = "0.1.41"
 walkdir = "2.5.0"
 indicatif = "0.18.0"
+tempfile = "3.20.0"
 
 [dependencies.axoupdater]
 version = "0.9.0"
