--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ tracing = "0.1.41"
 walkdir = "2.5.0"
 indicatif = "0.18.0"
 tempfile = "3.20.0"
+zip = "4.3.0"
+serde_json = "1.0.142"
 
 [dependencies.axoupdater]
 version = "0.9.0"
