--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ indicatif = "0.18.0"
 tempfile = "3.20.0"
 zip = "4.3.0"
 serde_json = "1.0.142"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dependencies.axoupdater]
 version = "0.9.0"
