--- a/de.toml
+++ b/de.toml
@@ -21,5 +21,5 @@ command = "cargo check"
 [setup.steps.complex]
 name = "Demonstrate complex command"
 apply = { "command" = "tee ${FILE}", "stdin" = { "file" = "${FILE}" } }
-export = { command = "echo ${FILE}", stdout = { "file" = "${FILE}" } }
+export = { command = "cat ${FILE}", stdout = { "file" = "${FILE}" } }
 env = { FILE = "COMPLEX_COMMAND_FILE" }
