--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tempfile = "3.20.0"
 zip = "4.3.0"
 serde_json = "1.0.142"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+regex = "1.11.2"
 
 [dependencies.axoupdater]
 version = "0.9.0"
