Add support for stdin file piping in apply commands
- Allow ApplyCommand to specify a file for stdin input - Update
EnvMapper to support default and custom environment values - Pass
DE_PROJECT_FILES env to commands for file path resolution - Run apply
commands with stdin file if specified - Improve display formatting for
ApplyCommand

--- a/de.toml
+++ b/de.toml
@@ -16,10 +16,10 @@ destination = "$1.env"
 
 [setup.steps.basic]
 name = "Demonstrate basic command"
-command = "cargo check"
+command = "echo 'Hello, World!'"
 
 [setup.steps.complex]
 name = "Demonstrate complex command"
-apply = { "command" = "tee ${FILE}", "stdin" = { "file" = "${FILE}" } }
+apply = { "command" = "tee", "stdin" = { "file" = "${DE_PROJECT_FILES}/${FILE}" } }
 export = { command = "cat ${FILE}", stdout = { "file" = "${FILE}" } }
 env = { FILE = "COMPLEX_COMMAND_FILE" }
