Use canonical snapshot dir for file paths and stdin validation

--- a/de.toml
+++ b/de.toml
@@ -20,6 +20,6 @@ command = "echo 'Hello, World!'"
 
 [setup.steps.complex]
 name = "Demonstrate complex command"
-apply = { "command" = "tee", "stdin" = { "file" = "${DE_PROJECT_FILES}/${FILE}" } }
+apply = { "command" = "tee ${FILE}", "stdin" = { "file" = "${DE_PROJECT_FILES}/${FILE}" } }
 export = { command = "cat ${FILE}", stdout = { "file" = "${FILE}" } }
 env = { FILE = "COMPLEX_COMMAND_FILE" }
