--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ zip = "4.3.0"
 serde_json = "1.0.142"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 regex = "1.11.2"
+sha2 = "0.10.9"
 
 [dependencies.axoupdater]
 version = "0.9.0"
